syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_udfs_user;

message DsRelationUdfsUser {

     int32 id=1 ;
     int32 user_id=2 ;
     optional int32 udf_id=3 ;
     optional int32  perm=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationUdfsUserService {
  rpc ListDsRelationUdfsUsers(ListDsRelationUdfsUsersRequest) returns (ListDsRelationUdfsUsersResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationUdfsUsers"
    };
  }

  rpc GetDsRelationUdfsUser(GetDsRelationUdfsUserRequest) returns (DsRelationUdfsUser) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationUdfsUsers/*}"
    };
  }

  rpc CreateDsRelationUdfsUser(CreateDsRelationUdfsUserRequest) returns (DsRelationUdfsUser) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationUdfsUsers"
      body: "DsRelationUdfsUser"
    };
  }

  rpc UpdateDsRelationUdfsUser(UpdateDsRelationUdfsUserRequest) returns (DsRelationUdfsUser) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationUdfsUser.name=DsRelationUdfsUsers/*}"
      body: "DsRelationUdfsUser"
    };
  }

  rpc DeleteDsRelationUdfsUser(DeleteDsRelationUdfsUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationUdfsUsers/*}"
    };
  }
}

// message DsRelationUdfsUser {
// ! This should be defined elsewhere
// }

message ListDsRelationUdfsUsersRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationUdfsUsersResponse {
  // The field name should match the noun "DsRelationUdfsUser" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationUdfsUser DsRelationUdfsUsers = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationUdfsUserRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationUdfsUserRequest {
  // The parent resource name where the DsRelationUdfsUser is to be created.
  string parent = 1;

  // The DsRelationUdfsUser id to use for this DsRelationUdfsUser.
  string DsRelationUdfsUser_id = 2;

  // The DsRelationUdfsUser resource to create.
  // The field name should match the Noun in the method name.
  DsRelationUdfsUser DsRelationUdfsUser = 3;
}

message UpdateDsRelationUdfsUserRequest {
  // The DsRelationUdfsUser resource which replaces the resource on the server.
  DsRelationUdfsUser DsRelationUdfsUser = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationUdfsUserRequest {
  // The resource name of the DsRelationUdfsUser to be deleted.
  string name = 1;
}
